tests/valid/64854_add/add.agu
-- Author: 64854, Diogo Almeida

let add (a, b) : (Int, Int) -> Int = 
    let sum : Int = a + b ;
    sum

let _ : Unit =
    print(add(1, 2))