tests/invalid/64854_missing_separator/missing_separator.agu
-- Author: 64854, Diogo Almeida

-- missing the ;
let a : Int = 1
let b : Int = 2